# agent-kanban

./: DESIGN.md  README.md  pyproject.toml
docs/iterations/: v0.1-mvp-retrospective.md  v0.3-retrospective.md  v0.4-retrospective.md  v0.5-retrospective.md  v0.6-retrospective.md  v0.7-retrospective.md
e2e-demo/string-utils/: README.md  kanban-board.json  kanban.config.yaml  string_utils.py  test_string_utils.py
e2e-demo/string-utils/docs/: execute-summary-1.md  requirements.md  task-breakdown.md
e2e-demo/string-utils/docs/reviews/: review-1.md
kanban/: __init__.py  board.py  cli.py  config.py  evaluator.py  models.py  reporter.py  runner.py  templates.py  workflow.py  worktree.py
skills/agent-kanban/: SKILL.md
templates/: archive.md.j2  code_review.md.j2  design_review.md.j2  execute_summary.md.j2  product_review.md.j2  qa_report.md.j2  qa_review.md.j2  requirements.md.j2  task_breakdown.md.j2
