[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-kanban"
version = "0.1.0"
description = "多Agent任务编排看板系统"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "rich>=13.0",
    "gitpython>=3.1",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["kanban"]

[project.scripts]
kanban = "kanban.cli:app"
